tests/baselines/reference/functionWithSameNameAsField.errors.txt
==== tests/cases/compiler/functionWithSameNameAsField.ts (1 errors) ====
    class TestProgressBar {
        public total: number;
        public total(total: number) {
               ~~~~~
!!! error TS2300: Duplicate identifier 'total'.
            this.total = total;
            return this;
        }
    }
    